# wind-turbine-design-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
app/: main.py
app/components/: airfoil_help.py  airfoil_preview.py  blade_geometry.py  calibration_lab.py  charts.py  design_compare.py  design_workspace.py  input_panel.py  learning_guide.py  result_cards.py
data/: classroom_measured_benchmarks.example.csv  presets.json  validation_benchmarks.json
docs/: installation.md  model_validation_report.md  onshape_workflow_manual.md  paper_model_notes.md  physics_model.md  student_guide.md
docs/superpowers/plans/: 2026-06-26-advanced-calibration.md  2026-06-29-model-validation-report.md  (+4 more)
scripts/: generate_onshape_manual_pdf.py  generate_validation_report.py  update.ps1  update.sh
tests/: test_airfoil_catalog.py  test_airfoil_geometry.py  test_airfoils.py  test_app.py  test_bemt_lite.py  test_blade_geometry.py  test_blade_presets.py  test_calibration.py  test_calibration_scaffold.py  test_design_state.py  test_design_store.py  test_generator.py  test_input_panel.py  test_models.py  test_onshape_export.py  test_physics.py  test_project_docs.py  test_section_airfoils.py  test_simulator.py  test_validation.py
windlab/: __init__.py  airfoil_geometry.py  airfoils.py  bemt.py  blade_geometry.py  blade_presets.py  calibration.py  design_state.py  design_store.py  generator.py  materials.py  models.py  onshape_export.py  physics.py  scoring.py  section_airfoils.py  simulator.py  validation.py
(+2 files in other folders)
