[project]
name = "wind-turbine-design-lab"
version = "0.1.0"
description = "Local-first educational wind turbine design simulator"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Wind Turbine Design Lab Contributors" }]
dependencies = [
    "numpy>=2.0,<3",
    "pandas>=2.2,<3",
    "plotly>=5.24,<7",
    "pydantic>=2.8,<3",
    "streamlit>=1.40,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<10",
    "ruff>=0.6,<1",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["windlab*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
